# pkg/api/controller/ctrlr_host.go
@@ -51,7 +51,7 @@ func (hc *HostController) Create(c *gin.Context) {
 
 	c.JSON(http.StatusCreated, &types.Host{
 		Name:           h.DBHost.Name,
-		HostId:         h.ID().String(),
+		HostId:         h.PeerID(),
 		BootstrappedAt: nil,
 		StartedAt:      util.StrPtr(h.StartedAt.Format(time.RFC3339Nano)),
 		CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
@@ -103,7 +103,7 @@ func (hc *HostController) Get(c *gin.Context) {
 	h := c.MustGet("host").(*dht.Host)
 	c.JSON(http.StatusOK, &types.Host{
 		Name:           h.DBHost.Name,
-		HostId:         h.DBHost.R.Peer.MultiHash,
+		HostId:         h.PeerID(),
 		BootstrappedAt: util.TimeToStr(h.Bootstrapped),
 		StartedAt:      util.TimeToStr(h.StartedAt),
 		CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
@@ -125,7 +125,7 @@ func (hc *HostController) Start(c *gin.Context) {
 
 	c.JSON(http.StatusOK, &types.Host{
 		Name:           h.DBHost.Name,
-		HostId:         h.ID().String(),
+		HostId:         h.PeerID(),
 		BootstrappedAt: util.TimeToStr(h.Bootstrapped),
 		StartedAt:      util.StrPtr(h.StartedAt.Format(time.RFC3339Nano)),
 		CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
@@ -138,7 +138,7 @@ func (hc *HostController) Stop(c *gin.Context) {
 	if h.Host == nil {
 		c.JSON(http.StatusOK, &types.Host{
 			Name:           h.DBHost.Name,
-			HostId:         h.DBHost.R.Peer.MultiHash,
+			HostId:         h.PeerID(),
 			BootstrappedAt: nil,
 			StartedAt:      nil,
 			CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
@@ -157,7 +157,7 @@ func (hc *HostController) Stop(c *gin.Context) {
 
 	c.JSON(http.StatusOK, &types.Host{
 		Name:           h.DBHost.Name,
-		HostId:         h.ID().String(),
+		HostId:         h.PeerID(),
 		BootstrappedAt: util.TimeToStr(h.Bootstrapped),
 		StartedAt:      nil,
 		CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
@@ -186,7 +186,7 @@ func (hc *HostController) Bootstrap(c *gin.Context) {
 
 	c.JSON(http.StatusOK, &types.Host{
 		Name:           h.DBHost.Name,
-		HostId:         h.ID().String(),
+		HostId:         h.PeerID(),
 		BootstrappedAt: util.TimeToStr(h.Bootstrapped),
 		StartedAt:      util.StrPtr(h.StartedAt.Format(time.RFC3339Nano)),
 		CreatedAt:      h.DBHost.CreatedAt.Format(time.RFC3339Nano),
